[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/selftest.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/about.tres" type="DynamicFont" id=2]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=3]
[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=4]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=5]
[ext_resource path="res://levels/ui/challengesmenu/page02.gd" type="Script" id=6]

[node name="page02" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -360.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 6 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )

[node name="Game name" type="Label" parent="."]
margin_top = 13.0
margin_right = 1280.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 5 )
text = "Challenges List (Page 2)"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 3 )]

[node name="Previous" type="Button" parent="."]
margin_left = 41.0
margin_top = 640.0
margin_right = 396.0
margin_bottom = 704.0
custom_fonts/font = ExtResource( 1 )
text = "Previous Page"

[node name="Next" type="Button" parent="."]
visible = false
margin_left = 891.0
margin_top = 640.0
margin_right = 1246.0
margin_bottom = 704.0
custom_fonts/font = ExtResource( 1 )
text = "Next Page"

[node name="Return" type="Button" parent="."]
margin_left = 457.0
margin_top = 640.0
margin_right = 812.0
margin_bottom = 704.0
custom_fonts/font = ExtResource( 1 )
text = "Return"

[node name="Ch8" type="Label" parent="."]
margin_top = 83.0
margin_right = 1280.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 2 )
text = "Kimberly is now a Chicken roll
Win Kimberly Arch challenge in a clever way"
align = 1

[node name="Ch9" type="Label" parent="."]
margin_top = 158.0
margin_right = 1280.0
margin_bottom = 209.0
custom_fonts/font = ExtResource( 2 )
text = "Take a rest
Play 2 hours hours without resting"
align = 1

[node name="Ch10" type="Label" parent="."]
margin_top = 218.0
margin_right = 1280.0
margin_bottom = 269.0
custom_fonts/font = ExtResource( 2 )
text = "Touch the grass
Play 24 hours without resting"
align = 1

[node name="Ch11" type="Label" parent="."]
margin_top = 269.0
margin_right = 1280.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 2 )
text = "John Hackerman
Trick this game successfully"
align = 1

[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
